# gpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: .gitignore  requirements.txt  tiny_shakespeare.py  tokenizer.py
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  backend_interface.h
src/backend/common/: CMakeLists.txt  tensor_utils.h
src/backend/cpu/: CMakeLists.txt  cpu_backend.cpp  cpu_backend.h
src/backend/cuda/: CMakeLists.txt  cuda_backend.h
src/backend/cuda/core/: cuda_backend.cu  cuda_memory.cu
src/backend/cuda/kernels/: adamw.cu  attention.cu  cross_entropy.cu  embedding.cu  gradient_clip.cu  layernorm.cu  linear.cu  residual.cu  softmax.cu
src/backend/cuda/utils/: cuda_utils.cuh
src/core/: CMakeLists.txt  benchmark.h  logger.h
src/infer/: CMakeLists.txt  data_manager.cpp  data_manager.h  infer.cpp  token_sampler.cpp  token_sampler.h
src/model/: CMakeLists.txt  gpt.cpp  gpt.h  gpt_test.cpp
src/train/: CMakeLists.txt  data_loader.cpp  data_loader.h  lr_scheduling.cpp  lr_scheduling.h  train.cpp
tools/: benchmark.py  gpt_reference.py  prep_grad.py
